objects/Case_Checklist_Question__c.object
<CustomObject>
    <description>RN - CloudSmiths - Object stores all the questions per heading for a specific checklist template</description>
    <fields>
        <fullName>Checklist_Template__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Checklist Template</label>
        <referenceTo>Case_Checklist_Template__c</referenceTo>
        <relationshipLabel>Case Checklist Questions</relationshipLabel>
        <relationshipName>Case_Checklist_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Heading__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Heading</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>RN - CloudSmiths</description>
        <label>Question</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Case Checklist Question</label>
    <listViews>
        <fullName>Detailed_View</fullName>
        <columns>NAME</columns>
        <columns>Checklist_Template__c</columns>
        <columns>Heading__c</columns>
        <columns>Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed View</label>
    </listViews>
    <nameField>
        <displayFormat>CHKQ-{000000000}</displayFormat>
        <label>CSC Checklist Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Checklist Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>